--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     p {
       text-align: center;
       font-size: 60px;
+      color: white;
       margin-top: 200px;
+    }
+
+    body {
+      background-image: url('https://media2.giphy.com/media/141pvY0vZOMfJu/source.gif');
+      background-size: cover;
+
+
+
+      height: 100vh;
+      padding: 0;
+      margin: 0;
     }
   </style>
   <title>Time to Check</title>
