--- a/html/index.html
+++ b/html/index.html
@@ -10,15 +10,12 @@
       text-align: center;
       font-size: 60px;
       color: white;
-      margin-top: 200px;
+      margin-top: 300px;
     }
 
     body {
       background-image: url('https://media2.giphy.com/media/141pvY0vZOMfJu/source.gif');
       background-size: cover;
-
-
-
       height: 100vh;
       padding: 0;
       margin: 0;
@@ -27,7 +24,7 @@
   <title>Time to Check</title>
 </head>
 
-<body>
+<body>;
   <p id="jsp"></p>
 </body>
 
