--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
     body {
       background-image: url('https://media2.giphy.com/media/141pvY0vZOMfJu/source.gif');
-      background-size: cover;
-      height: 100vh;
-      padding: 0;
-      margin: 0;
+      background-size: 100%;
+      background-repeat: repeat-y;
+      background-attachment: fixed;
+      height: 100%;
+      width: 100%;
     }
   </style>
   <title>Time to Check</title>
