--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="map" style="width:500px;height:400px;"></div>
         <script
             type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은 APP KEY를 넣으시면 됩니다."></script>
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2befa4c2ccbf24ac6c3bec24f23abb28"></script>
         <script>
             var container = document.getElementById('map');
             var options = {
