--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        <div id="map" style="width:500px;height:400px;"></div>
+        <div id="map" style="width:100%;height:900px;"></div>
         <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2befa4c2ccbf24ac6c3bec24f23abb28"></script>
@@ -15,13 +15,82 @@
             var options = {
                 center: new kakao
                     .maps
-                    .LatLng(33.450701, 126.570667),
+                    .LatLng(37.51128265027467, 127.07379549518326),
                 level: 3
             };
 
             var map = new kakao
                 .maps
                 .Map(container, options);
+
+            // 지도에 표시할 원을 생성합니다
+var circle = new kakao.maps.Circle({
+    center : new kakao.maps.LatLng(33.450701, 126.570667),  // 원의 중심좌표 입니다 
+    radius: 50, // 미터 단위의 원의 반지름입니다 
+    strokeWeight: 5, // 선의 두께입니다 
+    strokeColor: '#75B8FA', // 선의 색깔입니다
+    strokeOpacity: 1, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+    strokeStyle: 'dashed', // 선의 스타일 입니다
+    fillColor: '#CFE7FF', // 채우기 색깔입니다
+    fillOpacity: 0.7  // 채우기 불투명도 입니다   
+}); 
+
+// 지도에 원을 표시합니다 
+circle.setMap(map); 
+
+            // 일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
+            var mapTypeControl = new kakao
+                .maps
+                .MapTypeControl();
+            // 지도에 컨트롤을 추가해야 지도위에 표시됩니다 kakao.maps.ControlPosition은 컨트롤이 표시될 위치를 정의하는데
+            // TOPRIGHT는 오른쪽 위를 의미합니다
+            map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
+            // 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
+            var zoomControl = new kakao
+                .maps
+                .ZoomControl();
+            map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+
+            // 지도를 클릭한 위치에 표출할 마커입니다
+            var marker = new kakao
+                .maps
+                .Marker({
+                    // 지도 중심좌표에 마커를 생성합니다 position: map.getCenter()
+                });
+            // 지도에 마커를 표시합니다
+            marker.setMap(map);
+            // 지도에 클릭 이벤트를 등록합니다 지도를 클릭하면 마지막 파라미터로 넘어온 함수를 호출합니다
+            kakao
+                .maps
+                .event
+                .addListener(map, 'click', function (mouseEvent) {
+
+                    // 클릭한 위도, 경도 정보를 가져옵니다
+                    var latlng = mouseEvent.latLng;
+
+                    // 마커 위치를 클릭한 위치로 옮깁니다
+                    marker.setPosition(latlng);
+
+                    //마커 생성 시 앞전 텍스트 인포윈도우는 삭제
+                    infowindow.close();
+                });
+            // 마커를 클릭했을 때 마커 위에 표시할 인포윈도우를 생성합니다
+            var iwContent = '<div style="padding:5px;">Hello World!</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
+
+            // 인포윈도우를 생성합니다
+            var infowindow = new kakao
+                .maps
+                .InfoWindow({content: iwContent, removable: iwRemoveable});
+
+            // 마커에 클릭이벤트를 등록합니다
+            kakao
+                .maps
+                .event
+                .addListener(marker, 'click', function () {
+                    // 마커 위에 인포윈도우를 표시합니다
+                    infowindow.open(map, marker);
+                });
         </script>
     </body>
 </html>
