--- a/index.html
+++ b/index.html
@@ -23,21 +23,6 @@
                 .maps
                 .Map(container, options);
 
-            // 지도에 표시할 원을 생성합니다
-var circle = new kakao.maps.Circle({
-    center : new kakao.maps.LatLng(33.450701, 126.570667),  // 원의 중심좌표 입니다 
-    radius: 50, // 미터 단위의 원의 반지름입니다 
-    strokeWeight: 5, // 선의 두께입니다 
-    strokeColor: '#75B8FA', // 선의 색깔입니다
-    strokeOpacity: 1, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
-    strokeStyle: 'dashed', // 선의 스타일 입니다
-    fillColor: '#CFE7FF', // 채우기 색깔입니다
-    fillOpacity: 0.7  // 채우기 불투명도 입니다   
-}); 
-
-// 지도에 원을 표시합니다 
-circle.setMap(map); 
-
             // 일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
             var mapTypeControl = new kakao
                 .maps
@@ -71,7 +56,7 @@ circle.setMap(map);
                     // 마커 위치를 클릭한 위치로 옮깁니다
                     marker.setPosition(latlng);
 
-                    //마커 생성 시 앞전 텍스트 인포윈도우는 삭제
+                    //마커 생성 시 앞전 텍스트 인포윈도우 삭제
                     infowindow.close();
                 });
             // 마커를 클릭했을 때 마커 위에 표시할 인포윈도우를 생성합니다
