--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script> <!--jQuery 로드-->
         <script
             type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2befa4c2ccbf24ac6c3bec24f23abb28&libraries=clusterer"></script>
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2befa4c2ccbf24ac6c3bec24f23abb28&libraries=clusterer"></script> <!--KAKAO-MAP clusterer 라이브러리 로드-->
         <title>Sample-KAKAO_Map</title>
     </head>
     <body>
         <div id="map" style="width:100%;height:900px;"></div>
         <script
             type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2befa4c2ccbf24ac6c3bec24f23abb28"></script>
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2befa4c2ccbf24ac6c3bec24f23abb28"></script> <!--KAKAO-MAP 로드-->
         <script>
             let map = new kakao
                 .maps
@@ -21,8 +21,8 @@
                     // 지도를 표시할 div
                     center: new kakao
                         .maps
-                        .LatLng(36.2683, 127.6358), // 지도의 중심좌표
-                    level: 13 // 지도의 확대 레벨
+                        .LatLng(36.2683, 127.6358), // 초기 지도의 중심좌표
+                    level: 13 // 초기 지도의 확대 레벨
                 });
 
             // 일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
@@ -33,7 +33,7 @@
             // 지도에 컨트롤을 추가해야 지도위에 표시됩니다 kakao.maps.ControlPosition은 컨트롤이 표시될 위치를 정의하는데
             // TOPRIGHT는 오른쪽 위를 의미합니다
             map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
-
+            
             // 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
             var zoomControl = new kakao
                 .maps
@@ -50,7 +50,7 @@
                     map: map, // 마커들을 클러스터로 관리하고 표시할 지도 객체
                     averageCenter: true, // 클러스터에 포함된 마커들의 평균 위치를 클러스터 마커 위치로 설정
                     minLevel: 10, // 클러스터 할 최소 지도 레벨
-                    disableClickZoom: true // 클러스터 마커를 클릭했을 때 지도가 확대되지 않도록 설정한다
+                    disableClickZoom: false // 클러스터 마커를 클릭했을 때 지도가 확대되지 않도록 설정한다
                 });
 
             // 데이터를 가져오기 위해 jQuery를 사용합니다 데이터를 가져와 마커를 생성하고 클러스터러 객체에 넘겨줍니다
@@ -62,10 +62,36 @@
                         .Marker({
                             position: new kakao
                                 .maps
-                                .LatLng(position.lat, position.lng)
+                                .LatLng(position.lat, position.lng),
+                            clickable: true
                         });
                 });
+                for (let index = 0; index < markers.length; index++) {
+                    //마커에 표시할 인포윈도우를 생성합니다
+                    var infowindow = new kakao
+                        .maps
+                        .InfoWindow({
+                            content: data
+                                .positions[index]
+                                .text // 인포윈도우에 표시할 내용
+                        });
 
+                    // 마커에 mouseover 이벤트와 mouseout 이벤트를 등록합니다 이벤트 리스너로는 클로저를 만들어 등록합니다 for문에서 클로저를
+                    // 만들어 주지 않으면 마지막 마커에만 이벤트가 등록됩니다
+                    kakao
+                        .maps
+                        .event
+                        .addListener(
+                            markers[index],
+                            'mouseover',
+                            makeOverListener(map, markers[index], infowindow)
+                        );
+                    kakao
+                        .maps
+                        .event
+                        .addListener(markers[index], 'mouseout', makeOutListener(infowindow));
+
+                }
                 // 클러스터러에 마커들을 추가합니다
                 clusterer.addMarkers(markers);
             });
@@ -83,6 +109,20 @@
                     // 지도를 클릭된 클러스터의 마커의 위치를 기준으로 확대합니다
                     map.setLevel(level, {anchor: cluster.getCenter()});
                 });
+
+            // 인포윈도우를 표시하는 클로저를 만드는 함수입니다
+            function makeOverListener(map, marker, infowindow) {
+                return function () {
+                    infowindow.open(map, marker);
+                };
+            }
+
+            // 인포윈도우를 닫는 클로저를 만드는 함수입니다
+            function makeOutListener(infowindow) {
+                return function () {
+                    infowindow.close();
+                };
+            }
         </script>
     </body>
 </html>
